--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-WSMYELV32L');
 </script>
 
-<meta name="description" content="A unblocked games site that is easy to deploy, has tons of games, and is nice to the eyes">
+<meta name="description" content="a very sigma sigma site made by NetorgDEV, aka BiggerBetter96, aka CrypticMesaageOC2.">
  
 <link rel="stylesheet" href="style.css">
 <header>
